# rail_object_detection

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  DRFCN-README.md  LICENSE  README.md  build.sh  init.sh  package.xml  requirements.txt  setup.py
include/object_detector/: detector.h
include/rail_object_detector/: darknet.h  darknet_detector.h  detector.h
launch/: darknet.launch  def_detector.launch  def_detector_demo.launch  detector.launch  drfcn.launch  drfcn_demo.launch  test.launch
libs/darknet/: .gitignore  Makefile  README.md  python_wrapper.py
libs/darknet/cfg/: coco.data
libs/darknet/src/: demo.c  detector.c  detector.h  image.c  image.h  utils.c  yolo_kernels.cu
libs/drfcn/nms/: cpu_nms.c  gpu_nms.cpp
msg/: Object.msg
nodes/: darknet_node.cpp  drfcn_node
rail_object_detection/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_object_detection_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_object_detection_msgs/msg/: Detections.msg  Object.msg
rail_object_detector/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  requirements.txt
rail_object_detector/include/rail_object_detector/: darknet_detector.h
rail_object_detector/launch/: drfcn_demo.launch
rail_object_detector/libs/darknet/: .gitignore  Makefile
rail_object_detector/libs/darknet/src/: darknet.c  detector.c  parser.c
rail_object_detector/libs/drfcn/core/: DataParallelExecutorGroup.py
rail_object_detector/nodes/: drfcn_node
rail_object_detector/scripts/: test_detections_topic.py  test_image_query.py  test_scene_query.py
rail_object_detector/src/: darknet_detector.cpp
rail_object_detector/src/rail_object_detector/: object_detectors.py
rail_object_detector_msgs/: CMakeLists.txt  package.xml
rail_object_detector_msgs/srv/: SceneQuery.srv
scripts/: config.yml  deformable.py  demo_pub.py  detector_node.py  hd_obj_detector_node.py  object_detector.py  rcnn_detector_node.py  test_detections_topic.py  test_image_query.py  test_scene_query.py
scripts/lib/data/cache/: train_gt_roidb.pkl
scripts/lib/datasets/: .factory.py.swp  coco_blocks.py  coco_blocks_eval.py  factory.py  imdb.py
scripts/lib/datasets/fast_rcnn/: config.py  test.py  train.py
scripts/lib/datasets/fast_rcnn/backup_fast_rcnn/: test.py  train.py
scripts/lib/fast_rcnn/: config.py  nms_wrapper.py  test.py
scripts/lib/pycocotools/: _mask.c
scripts/lib/roi_data_layer/: layer.py
scripts/lib/rpn/: anchor_target_layer.py  proposal_layer.py  proposal_target_layer.py
scripts/lib/transform/: torch_image_transform_layer.py
scripts/models/coco_blocks/faster_rcnn_alt_opt/: faster_rcnn_test.pt  stage1_fast_rcnn_solver30k40k.pt  stage1_fast_rcnn_train.pt  stage1_rpn_solver60k80k.pt  stage1_rpn_train.pt  stage2_fast_rcnn_solver30k40k.pt  stage2_fast_rcnn_train.pt  stage2_rpn_solver60k80k.pt  stage2_rpn_train.pt
scripts/tools/: compress_net.py  demo.py  rpn_generate.py  test_coco_blocks.py  test_net.py  train_faster_rcnn_alt_opt.py  train_net.py  train_svms.py
src/: darknet.cpp  darknet_detector.cpp  detector_node.cpp
src/object_detector/: detector.cpp
src/rail_object_detector/: detector.cpp  drfcn_detector.py  object_detectors.py
srv/: ImageQuery.srv  SceneQuery.srv
