<?xml version="1.0"?>
<package format="2">
  <name>rail_object_detection</name>
  <version>3.0.1</version>
  <description>Object Detection methods used in the RAIL Lab</description>

  <author email="banerjs.sid@gmail.com">Siddhartha Banerjee</author>
  <author email="andrew.silva@gatech.edu">David Kent</author>
  <maintainer email="banerjs.sid@gmail.com">Siddhartha Banerjee</maintainer>
  <maintainer email="andrew.silva@gatech.edu">David Kent</maintainer>

  <license>MIT</license>

  <url type="website">http://ros.org/wiki/rail_object_detection</url>
  <url type="bugtracker">https://github.com/GT-RAIL/rail_object_detection/issues</url>
  <url type="repository">https://github.com/GT-RAIL/rail_object_detection</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rail_object_detector</exec_depend>
  <exec_depend>rail_object_detection_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
