<?xml version="1.0"?>
<package format="2">
  <name>rail_object_detection_msgs</name>
  <version>3.0.1</version>
  <description>The rail_object_detection_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="banerjs.sid@gmail.com">Siddhartha Banerjee</maintainer>
  <maintainer email="andrew.silva@gatech.edu">Andrew Silva</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rail_object_detector</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- Check http://docs.ros.org/jade/api/catkin/html/howto/format2/catkin_overview.html -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
